# 2020-1-Atom-QA-Python-D-Tarasov

./: .gitignore  README.md  pull_request_template.md  requirements.txt
.github/workflows/: pytests.yaml  pythonpackage.yml
hw01/: pytest.ini
hw01/tests/: test_int.py  (+4 more)
hw02/: conftest.py  pytest.ini
project/: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
project/dockerfiles/jenkins/: Dockerfile
project/dockerfiles/myapp/: Dockerfile  myapp.conf
project/dockerfiles/myapp_test/: Dockerfile
project/dockerfiles/vkapi/: Dockerfile
project/dockerfiles/vkapi_test/: Dockerfile
project/jjb/: Jenkinsfile  README.md  final_pipeline.yaml  jenkins_jobs.example.ini  jenkins_jobs.ini  pipeline.yaml
project/jjb/myapp/: Jenkinsfile  pipeline.yaml
project/jjb/vkapi/: Jenkinsfile  pipeline.yaml
project/model/: myapp_user.py
project/myapp/: client.py
project/puppet/environments/production/modules/selenoid/manifests/: service.pp
project/puppet/environments/production/modules/selenoid/templates/: selenoid.service.erb
project/tests/: conftest.py
project/tests/api/: api_test.py  block_user_test.py  conftest.py  create_user.py  create_user_test.py  del_user_test.py  login.py  status_test.py  unblock_user_test.py  vk_api_test.py
project/tests/ui/: base.py  conftest.py  login_test.py  register_test.py  ui_test.py  welcome_test.py
project/tests/ui/locators/: locators.py
project/tests/ui/pages/: base.py  login.py  registration.py  welcome.py
project/vkapi/: client.py  requirements.txt  vkapi.py
project/vkapi/tests/: vkapi_test.py
(+35 files in other folders)
