[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Dmitry Tarasov <d.tarasov@corp.mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "^11.8.0"
python-dotenv = "^0.13.0"
flask = "^1.1.2"
pytest = "^5.4.2"
sqlalchemy = "^1.3.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
