[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Dmitry Tarasov <d.tarasov@corp.mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "^11.8.0"
python-dotenv = "^0.13.0"
flask = "^1.1.2"
pytest = "^5.4.2"
sqlalchemy = "^1.3.17"
pymysql = "^0.9.3"
Faker = "^4.1.0"
allure-pytest = "^2.8.13"
testcontainers = {extras = ["mysql"], version = "^3.0.0"}
selenium = "^3.141.0"
webdriver_manager = "^2.5.2"
pytest-xdist = "^1.32.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
